Beautify login form, with email validator

--- a/resources/public/css/style.css
+++ b/resources/public/css/style.css
@@ -3,7 +3,13 @@
 	max-width: 500px;
 }
 
+.im-centered-med {
+	margin: auto;
+	max-width: 600px;
+} 
+
 .im-centered-wide {
 	margin: auto;
 	max-width: 750px;
-}
+} 
+
